--- a/metro10.css
+++ b/metro10.css
@@ -12,3 +12,25 @@ body {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
+
+.mauno {
+    border-top: 10px solid transparent !important; 
+    color: #000;
+}
+.mauno:hover {
+    cursor: pointer;
+    color: #fdc82f;
+    border-top: 0px solid transparent !important;
+}
+i {
+    color: #ff5a00;
+}
+h1 {
+    padding: 10px;
+    font-family: 'Lato', sans-serif;
+    font-size: 2rem;
+}
+#logo {
+    width: 30rem;
+    padding: 0.5rem;
+}
